--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin: 30px;
+    color: slategray;
   }
   
   .navbar {
@@ -32,7 +34,24 @@ body {
     font-family: inherit;
     margin: 0;
   }
-  
+ #congress table{
+margin: 30px auto;
+width:60%;
+ }
+ .centered-content{
+   text-align: center;
+ }
+
+ #congress table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+#congress table th {
+  background-color: #f2f2f2;
+}
+#congress table th,td {
+  padding: 15px;
+}
+
   .navbar a:hover, .dropdown:hover .dropbtn {
     background-color: lightskyblue;
   }
