--- a/styles.css
+++ b/styles.css
@@ -1,174 +1,232 @@
 body {
-    /*font-family: Arial, Helvetica, sans-serif;*/
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: 30px;
-    color: slategray;
-  }
-  
-  .navbar {
-    overflow: hidden;
-    background-color: lightblue;
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
- #congress table{
-margin: 30px auto;
-width:60%;
- }
- .centered-content{
-   text-align: center;
- }
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin: 30px;
+  color: slategray;
+}
 
- #congress table tr:nth-child(even) {
+.navbar {
+  overflow: hidden;
+  background-color: lightblue;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+#congress table {
+  margin: 30px auto;
+  width: 60%;
+}
+
+.centered-content {
+  text-align: center;
+}
+
+#congress table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
 #congress table th {
   background-color: #f2f2f2;
 }
-#congress table th,td {
+
+#congress table th,
+td {
   padding: 15px;
 }
 
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: lightskyblue;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 125px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: slategray;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color:  lightskyblue;
-    color: white;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-  h2{
-      color: lightblue;
-      position: absolute;
-      top: 20px;
-      left:90px;
-  }
+.navbar a:hover,
+.dropdown:hover .dropbtn {
+  background-color: lightskyblue;
+}
 
-  img{
-      height: 50px;
-  }
-.home-image-wrapper{
- 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 125px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: slategray;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: lightskyblue;
+  color: white;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+h2 {
+  color: lightblue;
+  position: absolute;
+  top: 20px;
+  left: 90px;
+}
+
+img {
+  height: 50px;
+}
+
+.home-image-wrapper {
+
   margin-left: 20px;
   float: right;
 }
-.home-image{
-  height: 300px;  
-}
-.home-image-wrapper:after{
-content: " ";
-clear: both;
-display: block;
+
+.home-image {
+  height: 300px;
 }
 
-  i{
-      position: absolute;
-      top: 30px;
-      right:130px;
-  }
-  .mailto{
-      color:lightblue;
-      position: absolute;
-      top: 40px;
-      right:30px;
-  }
-
-  .footer {
-    width: 100%;
-    height: 50px;
-    background-color:lightblue;
-    color: white;
-    text-align: center;
-  }
-  .footer-text{
-    position: relative;
-    top: 15px;
-  }
-  .text{
-      margin: 10px;
-  }
-main{
-    position: relative;
-    margin: 30px;
+.home-image-wrapper:after {
+  content: " ";
+  clear: both;
+  display: block;
 }
-  /*accordion*/
-  #more {display: none;}
-  #myBtn{
-    background-color: lightblue;
-    color: white;
-    height: 40px;
-    width: 90px;
-  }
-  #text{
-      color: slategrey; 
-      text-align: justify;
-  }
 
-  /*loader*/
-  .spinner {
-    margin: 150px auto;
-    border: 16px solid #f3f3f3;
-    border-radius: 50%;
-    border-top: 16px solid #3498db;
-    width: 120px;
-    height: 120px;
-    -webkit-animation: spin 2s linear infinite; /* Safari */
-    animation: spin 2s linear infinite;
-  }
-  
+i {
+  position: absolute;
+  top: 30px;
+  right: 130px;
+}
+
+.mailto {
+  color: lightblue;
+  position: absolute;
+  top: 40px;
+  right: 30px;
+}
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: lightblue;
+  color: white;
+  text-align: center;
+}
+
+.footer-text {
+  position: relative;
+  top: 15px;
+}
+
+.text {
+  margin: 10px;
+}
+
+main {
+  position: relative;
+  margin: 30px;
+}
+
+/*accordion*/
+#more {
+  display: none;
+}
+
+#myBtn {
+  background-color: lightblue;
+  color: white;
+  height: 40px;
+  width: 90px;
+}
+
+#text {
+  color: slategrey;
+  text-align: justify;
+}
+
+/*loader*/
+.spinner {
+  margin: 150px auto;
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 2s linear infinite;
   /* Safari */
-  @-webkit-keyframes spin {
-    0% { -webkit-transform: rotate(0deg); }
-    100% { -webkit-transform: rotate(360deg); }
+  animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
   }
-  
-  @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+
+  100% {
+    -webkit-transform: rotate(360deg);
   }
-  /*taken from url=https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader*/
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/*taken from url=https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader*/
+
+/*grid*/
+.grid {
+
+  display: grid;
+  grid-gap: 20px;
+  max-width: 100%;
+  margin: 30px 30px;
+  grid-template-columns:
+    1fr 1fr;
+  grid-template-rows: auto auto;
+  grid-template-areas:
+    "area1 area2"
+    "area3 area4"
+}
+
+.glance-table {
+  grid-area: area2;
+}
+
+.least {
+  grid-area: area3;
+}
+
+.most {
+  grid-area: area4;
+}
